--- a/hackathon_blog/src/main/resources/templates/index.html
+++ b/hackathon_blog/src/main/resources/templates/index.html
@@ -1,12 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html
+  lang="en"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="~{nav_template.html}"
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <p></p>
-</body>
+    <style>
+      .grid-container {
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        grid-column-gap: 20px;
+        grid-row-gap: 10px;
+      }
+      .card {
+        width: 100%;
+      }
+      .text-content {
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        display: -webkit-box;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+      .count-comment {
+        margin-left: 10px;
+      }
+      #paging{
+        margin-top: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+      }
+      #post-content{
+        height: 500px;
+      }
+    </style>
+  </head>
+  <body>
+    <div layout:fragment="content">
+      <div id="post-content">
+      <div class="grid-container">
+        <div class="card" th:each="post : ${posts}">
+          <div class="card-body">
+            <h5 class="card-title">[(${post.title})]</h5>
+            <p class="card-text">[(${post.user.fullName})]</p>
+            <p class="card-text text-content">[(${post.content})]</p>
+            <a th:href="@{/posts/{id}(id=${post.id})}">See more...</a><span class="count-comment">[(${post.comments.size()})]</span><span> <i class="far fa-comment-dots"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+      <div id="paging">
+        <ul class="pagination">
+          <li
+            class="page-item"
+            th:classappend="${currentPage} == 1 ? 'disabled' : ''"
+          >
+            <a
+              class="page-link"
+              th:href="@{/index?page={page}(page=${currentPage - 1})}"
+              >Previous</a
+            >
+          </li>
+          <li class="page-item" th:each="i : ${#numbers.sequence(1, totalPage)}">
+            <a class="page-link" th:href="@{/index?page={i}(i=${i})}">[(${i})]</a>
+          </li>
+          <li
+            class="page-item"
+            th:classappend="${currentPage} == ${totalPage} ? 'disabled' : ''"
+          >
+            <a
+              class="page-link"
+              th:href="@{/index?page={page}(page=${currentPage + 1})}"
+              >Next</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
